<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".presentation.ui.fragments.createpost.CreatePostFragment">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tb_create_post"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#2E2121"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start"
            android:text="@string/cancel"
            android:textColor="@android:color/darker_gray"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/create_post"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="16dp"
            android:text="@string/post"
            android:textColor="@android:color/holo_orange_light"
            android:textSize="16sp" />

    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_user_image"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_margin="16dp"
        android:src="@drawable/ava"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tb_create_post"
        app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Full" />

    <TextView
        android:id="@+id/tv_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/iv_user_image"
        app:layout_constraintStart_toEndOf="@+id/iv_user_image"
        app:layout_constraintTop_toTopOf="@+id/iv_user_image"
        app:layout_goneMarginStart="8dp"
        tools:text="Kossi" />

    <EditText
        android:id="@+id/et_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:hint="@string/write_something"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/iv_user_image"
        app:layout_constraintTop_toBottomOf="@+id/iv_user_image"
        tools:ignore="Autofill,TextFields" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/et_content">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/check_box">

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/cb_nsfw"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:button="@drawable/custon_click"
                android:paddingHorizontal="12dp"
                android:text="@string/nsfw"
                android:textStyle="bold" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:background="@drawable/check_box">

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/cb_spoiler"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:button="@drawable/custon_click"
                android:paddingHorizontal="12dp"
                android:text="@string/spoiler"
                android:textStyle="bold" />

        </FrameLayout>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:indeterminateTint="#FF5722"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>