<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.fragments.onboard.BoardFragment">


    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.tbuonomo.viewpagerdotsindicator.WormDotsIndicator
        android:id="@+id/dots_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start|bottom"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="32dp"
        app:dotsColor="#FF5722"
        app:dotsCornerRadius="8dp"
        app:dotsSize="8dp"
        app:dotsSpacing="4dp"
        app:dotsStrokeColor="@color/white"
        app:dotsStrokeWidth="6dp" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btm_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#FF5722"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:visibility="gone"
        app:cornerRadius="24dp"
        tools:visibility="visible" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#FF5722"
        android:text="@string/start"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:visibility="gone"
        app:cornerRadius="24dp"
        tools:visibility="invisible" />

    <TextView
        android:id="@+id/tv_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|top"
        android:layout_margin="20dp"
        android:background="@color/white"
        android:paddingHorizontal="8dp"
        android:text="@string/skip"
        android:textColor="#FF5722"
        android:textSize="16sp" />
</FrameLayout>